Update to modern Java